src/test/ui/stability-attribute/stability-attribute-non-staged-force-unstable.stderr
error: stability attributes may not be used outside of the standard library
  --> $DIR/stability-attribute-non-staged-force-unstable.rs:3:1
   |
LL | #[unstable()]
   | ^^^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/stability-attribute-non-staged-force-unstable.rs:4:1
   |
LL | #[stable()]
   | ^^^^^^^^^^^

error: stability attributes may not be used outside of the standard library
  --> $DIR/stability-attribute-non-staged-force-unstable.rs:5:1
   |
LL | #[rustc_deprecated()]
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

